--- a/CameraWorker/CameraWorker.csproj
+++ b/CameraWorker/CameraWorker.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="FFmpeg.AutoGen" Version="7.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.4.0" />
+    <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
